Fixing PMD generated tasks: use interface instead of implementation